2008-04-08  Nestor Salceda <nestor.salceda@gmail.com>

	* Expression.cs: Moved to ExpressionCollection.cs
	* ExpressionCollection.cs: Moved due the new class name.
	* Makefile.am: Replaced Expression.cs with ExpressionCollection.cs

2008-04-06  Sebastien Pouliot  <sebastien@ximian.com>

	* CodeDuplicatedLocator.cs: Renamed Expression to ExpressionCollection
	* Expression.cs: Add Equals(Expression) method to satisfy 
	ImplementEqualsTypeRule. Renamed class to ExpressionCollection to
	satisfy UseCorrectSuffixRule
	* ExpressionFillerVisitor.cs: Renamed Expression to 
	ExpressionCollection

2008-03-05  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidSpeculativeGeneralityRule.cs: Change CheckMethods to static.

2008-02-17  Sebastien Pouliot  <sebastien@ximian.com>

	* Expression.cs: Avoid double-cast and don't throw an exception here
	(not a good place). We need a rule for the later behaviour.

2008-02-16  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidLongMethodsRule.cs: Avoid NRE when processing System.Object.

2008-02-16  Sebastien Pouliot  <sebastien@ximian.com> 

	* AvoidCodeDuplicatedInSameClassRule.cs: Ignore rule on generated 
	code (e.g. C# compiler generates some duplication for anonymous 
	methods).
	* Expression.cs: Fix some parameters to match base class.
	* ExpressionFillerVisitor.cs: Fix some parameters to match base class.

2008-02-16  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidLongMethodsRule.cs: Display actual and maximum IL instruction 
	counts if -v -v is supplied.

2008-02-15  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidSpeculativeGeneralityRule.cs: Fix rule check since we now use
	a single collection for all rules.

2008-02-15  Nestor Salceda  <nestor.salceda@gmail.com>

	* Test/*.cs: Refactor the tests for accept the new rule's format.
	* *.cs: Adapt the rules to the new framework.
	* Makefile.am: Removed the -langversion:linq option.  You should use at
	least the 1.9 gmcs version to compile.
